logs/watchdog_20251011_1145.log
[11/10/2025 11:45:02,41] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 11:45:02,69] END WATCHDOG 
